# geotoy

./: .gitignore  Cargo.toml  README.md
ci/: script.sh
src/: lib.rs  lines.f.glsl  main.rs  star.v.glsl  triangles.f.glsl
wasm/: .gitignore  Cargo.toml  index.html  index.js  package.json
wasm/src/: lib.rs
